--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "hexo deploy",
     "server": "hexo server",
     "g:w": "hexo -w",
-    "server": "hexo server",
+    "server": "hexo server"
   },
   "hexo": {
     "version": "6.3.0"
