--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: 请叫我大帅
 description: '大帅的博客'
 keywords: 大帅, 博客, 不良帅
 author: 不良帅
-language: zh
+language: zh-CN
 timezone: ''
 
 # URL
@@ -97,7 +97,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: fluid
 # theme_config:
 
 # Deployment
