--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
-    "g:w": "hexo -w",
-    "server": "hexo server"
+    "g:w": "hexo generate -w"
   },
   "hexo": {
     "version": "6.3.0"
   },
   "dependencies": {
+    "css": "^3.0.0",
     "hexo": "^6.3.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
@@ -23,6 +23,7 @@
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
+    "hexo-theme-fluid": "^1.9.4",
     "hexo-theme-landscape": "^1.0.0"
   }
 }
