--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -351,7 +351,7 @@ navbar:
     - { key: "category", link: "/categories/", icon: "iconfont icon-category-fill" }
     - { key: "tag", link: "/tags/", icon: "iconfont icon-tags-fill" }
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
-    #- { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
+    - { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
 
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
 # Search feature, based on hexo-generator-search. If you have installed other search plugins, please disable this feature to avoid generating redundant index files
@@ -459,7 +459,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: /img/良_帅.jpeg
+  banner_img: /img/良_居.jpg
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -469,7 +469,7 @@ index:
   # 头图黑色蒙版的不透明度，available: 0 - 1.0， 1 是完全不透明
   # Opacity of the banner mask, 1.0 is completely opaque
   # Available: 0 - 1.0
-  banner_mask_alpha: 0.7
+  banner_mask_alpha: 0
 
   # 首页副标题的独立设置
   # Independent config of home page subtitle
@@ -531,7 +531,7 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: /img/良_帅.jpeg
+  banner_img: /img/良_居.jpg
   banner_img_height: 70
   banner_mask_alpha: 0.7
 
@@ -885,9 +885,9 @@ giscus:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: /img/良_帅.jpeg
+  banner_img: /img/良_居.jpg
   banner_img_height: 60
-  banner_mask_alpha: 0.7
+  banner_mask_alpha: 0
 
 
 #---------------------------
@@ -896,9 +896,9 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: /img/良_帅.jpeg
+  banner_img: /img/良_居.jpg
   banner_img_height: 60
-  banner_mask_alpha: 0.7
+  banner_mask_alpha: 0
 
   # 分类的排序字段，前面带减号是倒序，不带减号是正序
   # Sort field for categories, with a minus sign is reverse order
@@ -925,9 +925,9 @@ category:
 #---------------------------
 tag:
   enable: true
-  banner_img: /img/良_帅.jpeg
+  banner_img: /img/良_居.jpg
   banner_img_height: 80
-  banner_mask_alpha: 0.7
+  banner_mask_alpha: 0
   tagcloud:
     min_font: 15
     max_font: 30
@@ -942,18 +942,18 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: /img/良_帅.jpeg
+  banner_img: /img/良_居.jpg
   banner_img_height: 60
-  banner_mask_alpha: 0.7
-  avatar: /img/avatar.png
-  name: "Fluid"
-  intro: "An elegant theme for Hexo"
+  banner_mask_alpha: 0
+  avatar: /img/良_帅.jpeg
+  name: "不良帅"
+  intro: "纵使百万大军，又如何"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
     - { class: "iconfont icon-github-fill", link: "https://github.com", tip: "GitHub" }
-    - { class: "iconfont icon-douban-fill", link: "https://douban.com", tip: "豆瓣" }
-    - { class: "iconfont icon-wechat-fill", qrcode: "/img/favicon.png" }
+    # - { class: "iconfont icon-douban-fill", link: "https://douban.com", tip: "豆瓣" }
+    # - { class: "iconfont icon-wechat-fill", qrcode: "/img/favicon.png" }
 
 
 #---------------------------
@@ -964,9 +964,9 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: /img/良_帅.jpeg
+  banner_img: /img/良_居.jpg
   banner_img_height: 60
-  banner_mask_alpha: 0.7
+  banner_mask_alpha: 0
 
 
 #---------------------------
@@ -975,7 +975,7 @@ page:
 #---------------------------
 page404:
   enable: true
-  banner_img: /img/良_帅.jpeg
+  banner_img: /img/良_居.jpg
   banner_img_height: 85
   banner_mask_alpha: 0.7
   # 重定向到首页的延迟(毫秒)
@@ -989,9 +989,9 @@ page404:
 #---------------------------
 links:
   enable: true
-  banner_img: /img/良_帅.jpeg
+  banner_img: /img/良_居.jpg
   banner_img_height: 60
-  banner_mask_alpha: 0.7
+  banner_mask_alpha: 0
   # 友链的成员项
   # Member item of page
   items:
