--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -92,7 +92,7 @@ fun_features:
 
     # 游标字符
     # Cursor character
-    cursorChar: " 🚑"
+    cursorChar: " 🐳"
 
     # 是否循环播放效果
     # If true, loop animation
@@ -327,7 +327,7 @@ iconfont: //at.alicdn.com/t/font_1736178_lbnruvf0jn.css
 navbar:
   # 导航栏左侧的标题，为空则按 hexo config 中 `title` 显示
   # The title on the left side of the navigation bar. If empty, it is based on `title` in hexo config
-  blog_title: "大大大大大帅"
+  blog_title: "不良帅正在睡觉"
 
   # 导航栏毛玻璃特效，实验性功能，可能会造成页面滚动掉帧和抖动，部分浏览器不支持会自动不生效
   # Navigation bar frosted glass special animation. It is an experimental feature
@@ -425,7 +425,7 @@ footer:
   # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
   content: '
-    二代 · 不良帅
+    做一事，而后浪迹天涯
   '
 
   # 展示网站的 PV、UV 统计数
