--- a/.github/workflows/gitee-sync.yml
+++ b/.github/workflows/gitee-sync.yml
@@ -16,6 +16,6 @@ jobs:
           dst: gitee/Mkamvi
           dst_key: ${{ secrets.SYNC_GITEE_PRIVATE_KEY }}
           dst_token: ${{ secrets.GITEE_TOKEN }}
-          mapping: "mkamvi.github.io=>iWuzhi"
+          mappings: "mkamvi.github.io=>iWuzhi"
           static_list: "mkamvi.github.io"
           force_update: true
