--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - main # default branch
 
 jobs:
-  pages:
+  build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -19,7 +19,7 @@ jobs:
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "16"
       - name: Cache NPM dependencies
         uses: actions/cache@v2
         with:
@@ -36,3 +36,20 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
+
+  sync-to-gitee:
+    needs: build-and-deploy
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Organization mirror
+        uses: Yikun/hub-mirror-action@mappings
+        with:
+          src: github/Mkamvi
+          dst: gitee/iWuzhi
+          dst_key: ${{ secrets.SYNC_GITEE_PRIVATE_KEY }}
+          dst_token: ${{ secrets.GITEE_TOKEN }}
+          mappings: "mkamvi.github.io=>iWuzhi"
+          static_list: "mkamvi.github.io"
+          force_update: true
