--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: 不良帅本帅
 subtitle: 请叫我大帅
 description: '大帅的博客'
-keywords: 大帅, 博客, 不良帅
+keywords: 大帅,博客,不良帅,mkamv,mkamvi
 author: 不良帅
 language: zh-CN
 timezone: ''
