--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -161,8 +161,8 @@ color:
 
   # 全局字体色
   # Color of global text
-  text_color: "#3c4858"
-  text_color_dark: "#c4c6c9"
+  text_color: "#7e8a7d"
+  text_color_dark: "#7e8a7d"
 
   # 全局次级字体色（摘要、简介等位置）
   # Color of global secondary text (excerpt, introduction, etc.)
@@ -327,7 +327,7 @@ iconfont: //at.alicdn.com/t/font_1736178_lbnruvf0jn.css
 navbar:
   # 导航栏左侧的标题，为空则按 hexo config 中 `title` 显示
   # The title on the left side of the navigation bar. If empty, it is based on `title` in hexo config
-  blog_title: "正经的不良帅"
+  blog_title: "荒"
 
   # 导航栏毛玻璃特效，实验性功能，可能会造成页面滚动掉帧和抖动，部分浏览器不支持会自动不生效
   # Navigation bar frosted glass special animation. It is an experimental feature
@@ -951,8 +951,8 @@ about:
   banner_img_height: 60
   banner_mask_alpha: 0
   avatar: /img/良_帅.jpeg
-  name: "不良帅"
-  intro: "纵使百万大军，又如何"
+  name: "荒"
+  intro: "荒天帝的，荒"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
