--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -151,18 +151,18 @@ color:
 
   # 顶部菜单字体色
   # Color of navigation bar text
-  navbar_text_color: "#fff"
-  navbar_text_color_dark: "#d0d0d0"
+  navbar_text_color: "#5bff00"
+  navbar_text_color_dark: "#5bff00"
 
   # 副标题字体色
   # Color of navigation bar text
-  subtitle_color: "#000"
-  subtitle_color_dark: "#000"
+  subtitle_color: "#5bff00"
+  subtitle_color_dark: "#5bff00"
 
   # 全局字体色
   # Color of global text
-  text_color: "#7e8a7d"
-  text_color_dark: "#7e8a7d"
+  text_color: "#399c01"
+  text_color_dark: "#5bff00"
 
   # 全局次级字体色（摘要、简介等位置）
   # Color of global secondary text (excerpt, introduction, etc.)
@@ -181,8 +181,8 @@ color:
 
   # 文章正文字体色（h1 h2 h3...）
   # Color of Article heading (h1 h2 h3...)
-  post_heading_color: "#1a202c"
-  post_heading_color_dark: "#c4c6c9"
+  post_heading_color: "#399c01"
+  post_heading_color_dark: "#5bff00"
 
   # 文章超链接字体色
   # Color of post link
