--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -464,7 +464,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: /img/良_居.jpg
+  banner_img: /img/c_hair.png
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -536,7 +536,7 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: /img/良_居.jpg
+  banner_img: /img/c_hair.png
   banner_img_height: 70
   banner_mask_alpha: 0
 
@@ -890,7 +890,7 @@ giscus:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: /img/良_居.jpg
+  banner_img: /img/c_hair.png
   banner_img_height: 60
   banner_mask_alpha: 0
 
@@ -901,7 +901,7 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: /img/良_居.jpg
+  banner_img: /img/c_hair.png
   banner_img_height: 60
   banner_mask_alpha: 0
 
@@ -930,7 +930,7 @@ category:
 #---------------------------
 tag:
   enable: true
-  banner_img: /img/良_居.jpg
+  banner_img: /img/c_hair.png
   banner_img_height: 80
   banner_mask_alpha: 0
   tagcloud:
@@ -947,7 +947,7 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: /img/良_居.jpg
+  banner_img: /img/c_hair.png
   banner_img_height: 60
   banner_mask_alpha: 0
   avatar: /img/良_帅.jpeg
@@ -969,7 +969,7 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: /img/良_居.jpg
+  banner_img: /img/c_hair.png
   banner_img_height: 60
   banner_mask_alpha: 0
 
@@ -980,7 +980,7 @@ page:
 #---------------------------
 page404:
   enable: true
-  banner_img: /img/良_居.jpg
+  banner_img: /img/c_hair.png
   banner_img_height: 85
   banner_mask_alpha: 0.7
   # 重定向到首页的延迟(毫秒)
@@ -994,7 +994,7 @@ page404:
 #---------------------------
 links:
   enable: true
-  banner_img: /img/良_居.jpg
+  banner_img: /img/c_hair.png
   banner_img_height: 60
   banner_mask_alpha: 0
   # 友链的成员项
