--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -146,23 +146,23 @@ color:
 
   # 顶部菜单背景色
   # Color of navigation bar background
-  navbar_bg_color: "#57c52b"
-  navbar_bg_color_dark: "#57c52b"
+  navbar_bg_color: "#cadeff"
+  navbar_bg_color_dark: "#cadeff"
 
   # 顶部菜单字体色
   # Color of navigation bar text
-  navbar_text_color: "#5bff00"
-  navbar_text_color_dark: "#5bff00"
+  navbar_text_color: "#cadeff"
+  navbar_text_color_dark: "#cadeff"
 
   # 副标题字体色
   # Color of navigation bar text
-  subtitle_color: "#5bff00"
-  subtitle_color_dark: "#5bff00"
+  subtitle_color: "#cadeff"
+  subtitle_color_dark: "#cadeff"
 
   # 全局字体色
   # Color of global text
-  text_color: "#399c01"
-  text_color_dark: "#5bff00"
+  text_color: "#7a8caa"
+  text_color_dark: "#cadeff"
 
   # 全局次级字体色（摘要、简介等位置）
   # Color of global secondary text (excerpt, introduction, etc.)
@@ -181,18 +181,18 @@ color:
 
   # 文章正文字体色（h1 h2 h3...）
   # Color of Article heading (h1 h2 h3...)
-  post_heading_color: "#399c01"
-  post_heading_color_dark: "#5bff00"
+  post_heading_color: "#cadeff"
+  post_heading_color_dark: "#cadeff"
 
   # 文章超链接字体色
   # Color of post link
-  post_link_color: "#57c52b"
-  post_link_color_dark: "#57c52b"
+  post_link_color: "#cadeff"
+  post_link_color_dark: "#cadeff"
 
   # 超链接悬浮时字体色
   # Color of link when hovering
-  link_hover_color: "#3fc808"
-  link_hover_color_dark: "#3fc808"
+  link_hover_color: "#cadeff"
+  link_hover_color_dark: "#cadeff"
 
   # 超链接悬浮背景色
   # Color of link background when hovering
@@ -327,7 +327,7 @@ iconfont: //at.alicdn.com/t/font_1736178_lbnruvf0jn.css
 navbar:
   # 导航栏左侧的标题，为空则按 hexo config 中 `title` 显示
   # The title on the left side of the navigation bar. If empty, it is based on `title` in hexo config
-  blog_title: "镜"
+  blog_title: "道号岸然"
 
   # 导航栏毛玻璃特效，实验性功能，可能会造成页面滚动掉帧和抖动，部分浏览器不支持会自动不生效
   # Navigation bar frosted glass special animation. It is an experimental feature
@@ -426,11 +426,8 @@ footer:
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
   content: '
     <p>
-    做一事，而后浪迹天涯 <br />
+    道法自然 怒指诸佛<br />
     </p>
-    <div style="color: #9aa59d;">
-      国内用户请访问(⚡️)：<a href="https://iwuzhi.gitee.io">https://iwuzhi.gitee.io</a>
-    </div>
   '
 
   # 展示网站的 PV、UV 统计数
@@ -951,8 +948,8 @@ about:
   banner_img_height: 60
   banner_mask_alpha: 0
   avatar: /img/良_帅.jpeg
-  name: "镜"
-  intro: "镜中那人，竟然是你不是我！"
+  name: "T"
+  intro: "执一棋 不论祸福 不问归期"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
