--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -18,11 +18,11 @@
 
 # 用于浏览器标签的图标
 # Icon for browser tab
-favicon: /img/良_帅.jpeg
+favicon: /img/白老板.jpg
 
 # 用于苹果设备的图标
 # Icon for Apple touch
-apple_touch_icon: /img/良_帅.jpeg
+apple_touch_icon: /img/白老板.jpg
 
 
 # 浏览器标签页中的标题分隔符，效果： 文章名 - 站点名
