--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 不良帅本帅
+title: 克懒克的博客
 subtitle: 请叫我大帅
 description: '大帅的博客'
 keywords: 大帅,博客,不良帅,mkamv,mkamvi,不良帅的博客,mkamv的博客
-author: 荒
+author: 克懒克
 language: zh-CN
 timezone: ''
 
