--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 克懒克的博客
+title: 克懒克的个人主页
 subtitle: 请叫我大帅
-description: '大帅的博客'
-keywords: 大帅,博客,不良帅,mkamv,mkamvi,不良帅的博客,mkamv的博客
+description: '大帅的个人主页'
+keywords: 大帅,个人主页,不良帅,mkamv,mkamvi,不良帅的个人主页,mkamv的个人主页
 author: 克懒克
 language: zh-CN
 timezone: ''
