--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -1003,7 +1003,7 @@ links:
   items:
     - {
       title: "Fluid Blog",
-      intro: "主题博客",
+      intro: "主题个人主页",
       link: "https://hexo.fluid-dev.com/",
       avatar: "/img/favicon.png"
     }
@@ -1028,7 +1028,7 @@ links:
   # Custom content at the bottom of the links
   custom:
     enable: false
-    content: '<hr><p>在下方留言申请加入我的友链，按如下格式提供信息：</p><ul><li>博客名：Fluid</li><li>简介：Fluid 主题官方博客</li><li>链接：https://hexo.fluid-dev.com</li><li>图片：https://hexo.fluid-dev.com/img/favicon.png</li></ul>'
+    content: '<hr><p>在下方留言申请加入我的友链，按如下格式提供信息：</p><ul><li>个人主页名：Fluid</li><li>简介：Fluid 主题官方个人主页</li><li>链接：https://hexo.fluid-dev.com</li><li>图片：https://hexo.fluid-dev.com/img/favicon.png</li></ul>'
 
   # 评论插件
   # Comment plugin
