--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -442,7 +442,7 @@ footer:
   beian:
     enable: true
     # ICP证号
-    icp_text: 陕ICP备2024025244号
+    icp_text: 陕ICP备2024025244号-1
     # 公安备案号，不填则只显示ICP
     police_text:
     # 公安备案的编号，用于URL跳转查询
