--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -457,7 +457,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: /img/c_hair.png
+  banner_img: /img/白老板.jpg
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -476,7 +476,7 @@ index:
 
     # 为空则按 hexo config.subtitle 显示
     # If empty, text based on `subtitle` in hexo config
-    text: "请叫我大帅"
+    text: "凡事一心 谓之格物"
 
     # 通过 API 接口作为首页副标题的内容，必须返回的是 JSON 格式，如果请求失败则按 text 字段显示，该功能必须先开启 typing 打字机功能
     # Subtitle of the homepage through the API, must be returned a JSON. If the request fails, it will be displayed in `text` value. This feature must first enable the typing animation
@@ -528,7 +528,7 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: /img/c_hair.png
+  banner_img: /img/白老板.jpg
   banner_img_height: 70
   banner_mask_alpha: 0
 
@@ -881,7 +881,7 @@ giscus:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: /img/c_hair.png
+  banner_img: /img/白老板.jpg
   banner_img_height: 60
   banner_mask_alpha: 0
 
@@ -891,7 +891,7 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: /img/c_hair.png
+  banner_img: /img/白老板.jpg
   banner_img_height: 60
   banner_mask_alpha: 0
 
@@ -919,7 +919,7 @@ category:
 #---------------------------
 tag:
   enable: true
-  banner_img: /img/c_hair.png
+  banner_img: /img/白老板.jpg
   banner_img_height: 80
   banner_mask_alpha: 0
   tagcloud:
@@ -935,7 +935,7 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: /img/c_hair.png
+  banner_img: /img/白老板.jpg
   banner_img_height: 60
   banner_mask_alpha: 0
   avatar: /img/嫌弃.jpg
@@ -960,7 +960,7 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: /img/c_hair.png
+  banner_img: /img/白老板.jpg
   banner_img_height: 60
   banner_mask_alpha: 0
 
@@ -970,7 +970,7 @@ page:
 #---------------------------
 page404:
   enable: true
-  banner_img: /img/c_hair.png
+  banner_img: /img/白老板.jpg
   banner_img_height: 85
   banner_mask_alpha: 0.7
   # 重定向到首页的延迟(毫秒)
@@ -983,7 +983,7 @@ page404:
 #---------------------------
 links:
   enable: true
-  banner_img: /img/c_hair.png
+  banner_img: /img/白老板.jpg
   banner_img_height: 60
   banner_mask_alpha: 0
   # 友链的成员项
