--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -939,8 +939,8 @@ about:
   banner_img_height: 60
   banner_mask_alpha: 0
   avatar: /img/嫌弃.jpg
-  name: "克懒克"
-  intro: "此人道心坚定，不可憾动"
+  name: "源"
+  intro: "探索天地本源 追寻大道真义"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
