--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 克懒克的个人主页
+title: 源的个人主页
 subtitle: 请叫我大帅
 description: "大帅的个人主页"
 keywords: 大帅,个人主页,不良帅,mkamv,mkamvi,不良帅的个人主页,mkamv的个人主页
-author: 克懒克
+author: 源
 language: zh-CN
 timezone: ""
 
