--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,9 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: "_posts/blender/**"
+skip_render: 
+  - "_posts/blender/**"
+  - "_posts/interview/**"
 
 # Writing
 new_post_name: :title.md # File name of new posts
