--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -18,11 +18,11 @@
 
 # 用于浏览器标签的图标
 # Icon for browser tab
-favicon: /img/白老板.jpg
+favicon: /img/嫌弃.jpg
 
 # 用于苹果设备的图标
 # Icon for Apple touch
-apple_touch_icon: /img/白老板.jpg
+apple_touch_icon: /img/嫌弃.jpg
 
 # 浏览器标签页中的标题分隔符，效果： 文章名 - 站点名
 # Title separator in browser tab, eg: article - site
@@ -83,7 +83,7 @@ fun_features:
   # 为 subtitle 添加打字机效果
   # Typing animation for subtitle
   typing:
-    enable: true
+    enable: false 
 
     # 打印速度，数字越大越慢
     # Typing speed, the larger the number, the slower
@@ -358,7 +358,7 @@ navbar:
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
 # Search feature, based on hexo-generator-search. If you have installed other search plugins, please disable this feature to avoid generating redundant index files
 search:
-  enable: true
+  enable: false 
 
   # 搜索索引文件的路径，可以是相对路径或外站的绝对路径
   # Path for search index file, it can be a relative path or an absolute path
@@ -467,7 +467,7 @@ index:
   # 头图黑色蒙版的不透明度，available: 0 - 1.0， 1 是完全不透明
   # Opacity of the banner mask, 1.0 is completely opaque
   # Available: 0 - 1.0
-  banner_mask_alpha: 0
+  banner_mask_alpha: 0.4
 
   # 首页副标题的独立设置
   # Independent config of home page subtitle
@@ -476,12 +476,12 @@ index:
 
     # 为空则按 hexo config.subtitle 显示
     # If empty, text based on `subtitle` in hexo config
-    text: "凡事一心 谓之格物"
+    text: "制心一处 无事不办"
 
     # 通过 API 接口作为首页副标题的内容，必须返回的是 JSON 格式，如果请求失败则按 text 字段显示，该功能必须先开启 typing 打字机功能
     # Subtitle of the homepage through the API, must be returned a JSON. If the request fails, it will be displayed in `text` value. This feature must first enable the typing animation
     api:
-      enable: true
+      enable: false 
 
       # 请求地址
       # Request url
@@ -530,7 +530,7 @@ index:
 post:
   banner_img: /img/白老板.jpg
   banner_img_height: 70
-  banner_mask_alpha: 0
+  banner_mask_alpha: 0.4
 
   # 文章在首页的默认封面图，当没有指定 index_img 时会使用该图片，若两者都为空则不显示任何图片
   # Path of the default post cover when `index_img` is not set. If both are empty, no image will be displayed
@@ -883,7 +883,7 @@ giscus:
 archive:
   banner_img: /img/白老板.jpg
   banner_img_height: 60
-  banner_mask_alpha: 0
+  banner_mask_alpha: 0.4
 
 #---------------------------
 # 分类页
@@ -893,7 +893,7 @@ category:
   enable: true
   banner_img: /img/白老板.jpg
   banner_img_height: 60
-  banner_mask_alpha: 0
+  banner_mask_alpha: 0.4
 
   # 分类的排序字段，前面带减号是倒序，不带减号是正序
   # Sort field for categories, with a minus sign is reverse order
@@ -921,7 +921,7 @@ tag:
   enable: true
   banner_img: /img/白老板.jpg
   banner_img_height: 80
-  banner_mask_alpha: 0
+  banner_mask_alpha: 0.4
   tagcloud:
     min_font: 15
     max_font: 30
@@ -937,9 +937,9 @@ about:
   enable: true
   banner_img: /img/白老板.jpg
   banner_img_height: 60
-  banner_mask_alpha: 0
+  banner_mask_alpha: 0.4
   avatar: /img/嫌弃.jpg
-  name: "源"
+  name: "赛芜尤"
   intro: "探索天地本源 追寻大道真义"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
@@ -962,7 +962,7 @@ about:
 page:
   banner_img: /img/白老板.jpg
   banner_img_height: 60
-  banner_mask_alpha: 0
+  banner_mask_alpha: 0.4
 
 #---------------------------
 # 404页
@@ -972,7 +972,7 @@ page404:
   enable: true
   banner_img: /img/白老板.jpg
   banner_img_height: 85
-  banner_mask_alpha: 0.7
+  banner_mask_alpha: 0.4
   # 重定向到首页的延迟(毫秒)
   # Delay in redirecting to home page (milliseconds)
   redirect_delay: 5000
@@ -985,7 +985,7 @@ links:
   enable: true
   banner_img: /img/白老板.jpg
   banner_img_height: 60
-  banner_mask_alpha: 0
+  banner_mask_alpha: 0.4
   # 友链的成员项
   # Member item of page
   items:
