--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "deploy": "hexo deploy",
     "server": "hexo server",
     "g:w": "hexo generate -w",
-    "d": "zx ./build.mjs",
+    "d": "npm run d:daily",
+    "d:daily": "cross-env layout=daily zx ./build.mjs",
+    "d:more": "cross-env layout=more zx ./build.mjs",
     "h:clean": "hexo clean"
   },
   "hexo": {
